--- a/elections.html
+++ b/elections.html
@@ -39,113 +39,112 @@
     <link href="css/styles.css" rel="stylesheet">
 
 </head>
-    <div class="bg-election">
+<div class="bg-election">
 
-        <header>
+    <header>
 
-            <div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-                <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon my-toggler "></span>
-                </button>
-                <div class="collapse navbar-collapse"></div>
+        <div class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon my-toggler "></span>
+            </button>
+            <div class="collapse navbar-collapse"></div>
 
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="open-government.html">Open Government</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="elections.html">Elections <span
-                                    class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="volunteer.html">Volunteer</a>
-                        </li>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="open-government.html">Open Government</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="elections.html">Elections <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="volunteer.html">Volunteer</a>
+                    </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="donate.html">Donate</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="donate.html">Donate</a>
+                    </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="employment.html">Employment</a>
-                        </li>
-                    </ul>
-                </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="employment.html">Employment</a>
+                    </li>
+                </ul>
             </div>
-        </header>
-
-        <div class="text-left">
-            <img src="images/4869420be83.png" alt="">
         </div>
+    </header>
 
+    <div class="text-left">
+        <img src="images/4869420be83.png" alt="">
     </div>
 
-    <div class="container">
-        <div class="first-col">
+</div>
 
-            <h2 class="open-head">Did you know... </h2>
-            <br>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="card">
-                        <img class="card-img-top" src="images/pres-one.jpg" alt="Card image">
-                        <div class="card-body">
-                            <p class="card-text">No president has ever gotten more than 61% of the vote in the USA.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img class="card-img-top" src="images/pres-two.jpg" alt="Card image">
-                        <div class="card-body">
-                            <p class="card-text">Vladimir Putin got 64% of the vote in Russia in 2012.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img class="card-img-top" src="images/pres-three.jpg" alt="Card image">
-                        <div class="card-body">
+<div class="container">
+    <div class="first-col">
 
-                            <p class="card-text">Saddam Hussein said he got 100% of the vote in Iraq in 2002.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img class="card-img-top" src="images/pres-four.jpg" alt="Card image">
-                        <div class="card-body">
-
-                            <p class="card-text">But over 2000 nonpartisan elected officials really did get 100% of the
-                                vote in the Chicago region
-                                in 2013 and 2015!</p>
-                        </div>
+        <h2 class="open-head">Did you know... </h2>
+        <br>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="images/pres-one.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">No president has ever gotten more than 61% of the vote in the USA.</p>
                     </div>
                 </div>
             </div>
-            <br>
-            <div class="text-center">
-                <a href="#" class="btn btn-lg">How can we fix that?</a>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="images/pres-two.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">Vladimir Putin got 64% of the vote in Russia in 2012.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="images/pres-three.jpg" alt="Card image">
+                    <div class="card-body">
+
+                        <p class="card-text">Saddam Hussein said he got 100% of the vote in Iraq in 2002.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="images/pres-four.jpg" alt="Card image">
+                    <div class="card-body">
+
+                        <p class="card-text">But over 2000 nonpartisan elected officials really did get 100% of the
+                            vote in the Chicago region
+                            in 2013 and 2015!</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-
-    <hr width="70%">
-    <div class="footer">
-        <div class="col-md-12">
-            <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
-                Participation Institute</p>
+        <br>
+        <div class="text-center">
+            <a href="#" class="btn btn-lg">How can we fix that?</a>
         </div>
     </div>
-    </body>
+</div>
+
+<hr style="margin-top: 20%;" width="70%">
+<div class="footer">
+    <div class="col-md-12">
+        <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
+            Participation Institute</p>
+    </div>
+</div>
+</body>
 
 </html>
