dynamic table added

--- a/index.html
+++ b/index.html
@@ -55,8 +55,19 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="open-government.html">Open Government</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="open-government.html" id="#navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Open Government</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li> <a class="dropdown-item" href="#">Open Meetings</a></li>
+                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Open Records</a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#" class="dropdown-item">Record Request</a></li>
+                    <li><a href="#" class="dropdown-item">Open Records Violation Complaint</a></li>
+                  </ul>
+                </li>
+                <li><a class="dropdown-item" href="#">Economic Interests</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="elections.html">Elections</a>
@@ -93,6 +104,12 @@
 
   </div>
 
+  <!-- Practice code -->
+
+
+
+  <!-- practice code end -->
+
 
   <div class="container">
     <div class="first-col">
@@ -100,38 +117,30 @@
         <div class="col-md-4">
           <div class="book-image">
             <a href="#">
-              <img src="images/book-image.png" width="250" height="306" alt="Book">
+              <img src="images/2021-401-candidatepacketkit-cover_orig.jpg" width="250" height="306" alt="Book">
             </a>
           </div>
-          <div class="caption"> Click the book cover to learn more.</div>
+          <div class="caption"> Click the picture to get your packet</div>
 
         </div>
         <div class="col-md-8">
-          <h2 class="text-one"> 2019 edition now available</h2>
-          <p style="font-size: 18px;"> The only book containing the latest versions of the Freedom of Information and
-            Open Meetings Acts,
-            and other open government laws, with index and official interpretations by the Illinois Courts and
-            Attorney General. It includes extra material for the law enforcement community. It is widely-used
-            throughout the State as the indispensable tool for watchdogs, media and officials alike to avoid
-            accidentally violating the law. Only $19.95 plus shipping.</p>
+          <h2 class="text-one"> ​Local election nomination papers are now available </h2>
+          <p style="font-size: 18px;"> There is a great shortage of candidates for village boards, city councils,
+            school, library, park, fire and other elected boards. The election is in April, but nomination papers must
+            be turned in before Christmas! In most cases 50 or fewer valid signatures are enough, and you can get a free
+            list from your county clerk of neighbors eligible to sign. You can download the packet of forms and handy
+            instructions from this page.</p>
 
-          <p><a style="text-decoration: none; font-size: 20px; color: chocolate;" href="#" class="para-link"> Click here
-              to order the 2019 edition, now. </a></p>
+          <p><a style="text-decoration: none; font-size: 20px; color: chocolate;" href="#" class="para-link">
+            Click here to download your nomination papers, now.</a></p>
         </div>
-        <p style="font-size: 16px; margin-top: 5%; margin-bottom: 5%;"> 150 full-color pages of helpful information,
-          directions, indexed statutes, analysis, tables, samples and forms to aid citizens, press, and officials in
-          exercising and complying with
-          the Sunshine Laws that implement the public's civil rights to open government.​ </p>
+    
+          <img src="images/1402083.png" alt="" class="img-fluid" style="display: block;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top:5%;">
+       
         <br>
-        <div class="col-md-6">
-
-          <a href="#" class="btn btn-lg">Click Here to Learn More</a>
-
-        </div>
-        <div class="col-md-6">
-          <br>
-          <a href="#" class="btn btn-lg">Click Here to Order the Sunshine Laws Manual</a>
-        </div>
       </div>
     </div>
 
