done with home-page

--- a/index.html
+++ b/index.html
@@ -113,25 +113,27 @@
 
   <div class="container">
     <div class="first-col">
+      <a href="uploads/2021_401-candidatepacketkit-public.pdf" target="_blank" class="btn btn-md"> Click here to download your nomination papers</a>
       <div class="row">
+       
         <div class="col-md-4">
           <div class="book-image">
-            <a href="#">
-              <img src="images/2021-401-candidatepacketkit-cover_orig.jpg" width="250" height="306" alt="Book">
+            <a href="uploads/2021_401-candidatepacketkit-public.pdf" target="_blank">
+              <img src="images/2021-401-candidatepacketkit-cover_orig.jpg" width="250" height="320" alt="Book">
             </a>
           </div>
           <div class="caption"> Click the picture to get your packet</div>
 
         </div>
         <div class="col-md-8">
-          <h2 class="text-one"> ​Local election nomination papers are now available </h2>
-          <p style="font-size: 18px;"> There is a great shortage of candidates for village boards, city councils,
+          <h2 class="text-one"><em> ​Local election nomination papers are now available</em> </h2>
+          <p style="font-size: 25px;"> There is a great shortage of candidates for village boards, city councils,
             school, library, park, fire and other elected boards. The election is in April, but nomination papers must
             be turned in before Christmas! In most cases 50 or fewer valid signatures are enough, and you can get a free
             list from your county clerk of neighbors eligible to sign. You can download the packet of forms and handy
             instructions from this page.</p>
 
-          <p><a style="text-decoration: none; font-size: 20px; color: chocolate;" href="#" class="para-link">
+          <p><a style="text-decoration: none; font-size: 25px; color: #d75f04;" href="uploads/2021_401-candidatepacketkit-public.pdf" target="_blank" class="para-link">
             Click here to download your nomination papers, now.</a></p>
         </div>
     
@@ -151,19 +153,19 @@
         <div class="row">
           <div class="col-md-6">
             <ul class="list">
-              <li><a style="text-decoration: none;" href="">Open Government</a></li>
-              <li><a style="text-decoration: none;" href="">Elections</a></li>
-              <li><a style="text-decoration: none;" href="">What We Do</a></li>
-              <li><a style="text-decoration: none;" href="">Donate</a></li>
+              <li><a href="open-government.html">Open Government</a></li>
+              <li><a href="elections.html">Elections</a></li>
+              <li><a href="about.html">What We Do</a></li>
+              <li><a href="donate.html">Donate</a></li>
             </ul>
 
           </div>
           <div class="col-md-6">
             <ul class="list">
-              <li><a style="text-decoration: none;" href="">Volunteer</a></li>
-              <li><a style="text-decoration: none;" href="">Local Elections Guide</a></li>
-              <li><a style="text-decoration: none;" href="">Nomination Forms</a></li>
-              <li><a style="text-decoration: none;" href="">Nomination Challenges</a></li>
+              <li><a href="volunteer.html">Volunteer</a></li>
+              <li><a href="uploads/2019_localelectionsguide_11.pdf" target="_blank">Local Elections Guide</a></li>
+              <li><a href="uploads/2021_401-candidatepacketkit-public.pdf" target="_blank">Nomination Forms</a></li>
+              <li><a href="">Nomination Challenges</a></li>
             </ul>
 
           </div>
