update donate and volunteer page

--- a/donate.html
+++ b/donate.html
@@ -90,7 +90,7 @@
 
     </div>
 
-    <!--Body of page-->
+    <!--Body of page--> 
     <div class="container">
         <div class="first-col">
 
@@ -100,16 +100,16 @@
                 operational expenses for utilities, postage, printing, and some staff and professional services. Your
                 tax-deductible contribution,
                 whether $25, $100, $500 or any other amount helps us continue to improve civic health in the region.</p>
-            <br>
+           
             <div class="row text-center">
                 <div class="col-md-4">
-                    <a style="text-decoration: none;" href="#" class="btn">Tax-deductible Status</a>
+                    <a style="text-decoration: none;" href="uploads/501c3approvalletter.pdf" target="_blank" class="btn">Tax-deductible Status</a>
                 </div>
                 <div class="col-md-4">
                     <img src="images/btn_donateCC_LG.webp" alt="">
                 </div>
                 <div class="col-md-4">
-                    <a style="text-decoration: none;" href="#" class="btn">Contact Us</a>
+                    <a style="text-decoration: none;" href="contact.html" class="btn">Contact Us</a>
                 </div>
             </div>
         </div>
