updated contact section

--- a/contact.html
+++ b/contact.html
@@ -152,15 +152,15 @@
                 <div class="col-md-5" style="margin-left: 10%;">
                     <h2 class="donate-head"> Email addresses</h2>
 
-                    <span> General: <a style="text-decoration: none;" href="#" class="link">
+                    <span> General: <a style="text-decoration: none;" href="mailto:Info@CitizenParticipation.Org" class="link">
                             Info@CitizenParticipation.Org </a> <br>
-                        Elections Desk: <a style="text-decoration: none;" href="#" class="link">
+                        Elections Desk: <a style="text-decoration: none;" href="mailto:Elections@CitizenParticipation.Org" class="link">
                             Elections@CitizenParticipation.Org </a> <br>
-                        Errors: <a style="text-decoration: none;" href="#" class="link">
+                        Errors: <a style="text-decoration: none;" href="mailto:Accuracy@CitizenParticipation.Org" class="link">
                             Accuracy@CitizenParticipation.Org </a> <br>
-                        Public Records: <a style="text-decoration: none;" href="#" class="link">
+                        Public Records: <a style="text-decoration: none;" href="mailto:FOIA@CitizenParticipation.Org" class="link">
                             FOIA@CitizenParticipation.Org</a> <br>
-                        Public Meetings: <a style="text-decoration: none;" href="#" class="link">
+                        Public Meetings: <a style="text-decoration: none;" href="mailto:OMA@CitizenParticipation.Org" class="link">
                             OMA@CitizenParticipation.Org </a></span>
                     <p> <span style="font-weight: 600;margin-top: 3%;"> Telephone Number: </span>
                         (630) 791-0397‬</p>
