--- a/exampleelectionworksheets.html
+++ b/exampleelectionworksheets.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Help wanted</title>
+    <title>ExampleElectionWorksheets</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -41,11 +41,11 @@
 </head>
 
 <body>
-    <div class="bg-employment">
+    <div class="bg-brown">
 
         <header>
 
-            <div class="navbar navbar-expand-lg navbar-dark sticky-top">
+            <div class="navbar navbar-expand-lg navbar-dark  sticky-top">
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon my-toggler "></span>
                 </button>
@@ -57,17 +57,18 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="open-government.html">Open Government</a>
+                            <a class="nav-link" href="open-government.html">Open Government <span
+                                    class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="elections.html">Elections </a>
+                            <a class="nav-link" href="elections.html">Elections</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="volunteer.html">Volunteer</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="donate.html">Donate </a>
+                            <a class="nav-link" href="donate.html">Donate</a>
                         </li>
 
                         <li class="nav-item">
@@ -77,8 +78,7 @@
                             <a class="nav-link" href="contact.html">Contact us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="employment.html">Employment <span class="sr-only">(current)</span>
-                            </a>
+                            <a class="nav-link" href="employment.html">Employment</a>
                         </li>
                     </ul>
                 </div>
@@ -86,57 +86,73 @@
         </header>
 
         <div class="text-left">
-
-            <img src="images/4869420be83.png" alt=""><span class="emp-text">Employment</span>
+            <img src="images/icon_logo.png" alt="" style="margin-left: 5%;">
         </div>
 
     </div>
 
-    <div class="container">
-        <div class="first-col">
-            <h2 class="emp-head">Elections Research Assistant</h2>
-            <p class="emp-para">
-                This position is full time, and work can be done from home by a self-starter. It involves completing <a
-                    style="text-decoration: none;" href="exampleelectionworksheets.html" class="link"> two
-                    spreadsheets</a> based upon online
-                election results for each of the 1,300 public bodies of interest. Obsessive attention to detail is
-                absolutely paramount, experience with Excel-type spreadsheets is necessary, and some knowledge
-                about local government structures is helpful but not required.<a style="text-decoration: none;"
-                    href="mailto:Director@CitizenParticipation.org" class="link"> Click here to email your resume.</a>
-            </p>
-            <br>
-            <h2 class="emp-head">Staff Attorney </h2>
-            <p class="emp-para">
-                This position is full time, and work can be done from home by a self-starter. It is suitable for a
-                recent law school graduate. Compensation is within the limit to qualify for most
-                Law School Loan Repayment Assistance Programs for those working in the public service sector,
-                and includes annual licensure fee reimbursement and malpractice insurance. Principal work will be
-                analysis,
-                abstracting, and indexing of legal interpretations of the Illinois Open Meetings and Freedom of
-                Information acts
-                for publication. Additional duties will include supervision of volunteers assisting on this project and
-                others.
-                Federalist Society members are especially encouraged to apply. <a style="text-decoration: none;"
-                    href="mailto:Director@CitizenParticipation.org" class="link"> Click here to email your resume.</a>
-            </p>
 
-            <h2 class="emp-head">Of Counsel </h2>
-            <p class="emp-para">
-                This is a part-time position for one or more retired or semi-retired attorneys who want to give back to
-                the community while being able to work flexible hours as-needed from home.
-                The Citizen Participation Institute will seek recognition as a sponsoring entity under Illinois Supreme
-                Court Rule 756(k) so that inactive or retired attorneys may provide pro bono publico legal services
-                while remaining exempt from Minimum Continuing Legal Education requirements.
-                Compensation includes annual licensure fee reimbursement and malpractice insurance. <a
-                    style="text-decoration: none;" href="mailto:Director@CitizenParticipation.org" class="link"> Click
-                    here to email your inquiry.</a>
-            </p>
+    <!--Body of page-->
+    <div class="container spread-sheet">
 
+        <div class="row">
+            <div class="col-md-6">
+                <div class="sheet-image">
+                    <a href="uploads/1152643_orig.png">
+                        <img src="uploads/1152643_orig.png" alt="Picture" style="width: auto;max-width: 100%;">
+                    </a>
+                </div>
+                <div style="font-size: 90%;text-align: center;">Click the image to enlarge it</div>
+
+                <h4>The Competitiveness Spreadsheet</h4>
+                <p>There is one of these spreadsheets for each of the eight counties for the local elections of 2013 and
+                    2015.</p>
+
+                <p>All the possible elective offices are listed, by public body. Using data available on line, you will
+                    enter the number of seats available then, and the number of candidates for those seats. The
+                    spreadsheet will calculate the amount of choice a voter had in that race.
+                </p>
+                <p> This information is important to establish the base line of how easy it is for a candidate to win if
+                    he
+                    runs. After we do our educational outreach to get more people interested in running, we will be able
+                    to
+                    see if were successful in increasing voter choice in various races.
+                </p>
+            </div>
+            <div class="col-md-6">
+
+                <div class="sheet-image">
+                    <a href="uploads/2235652_orig.png">
+                        <img src="uploads/2235652_orig.png" alt="Picture" style="width: auto;max-width: 100%;">
+                    </a>
+                </div>
+                <div style="font-size: 90%;text-align: center;">Click the image to enlarge it</div>
+
+                <h4>The Electoral History Spreadsheet</h4>
+                <p>We will need one of these spreadsheets for each of the 1,300 public bodies expected to have
+                    candidates on the April 2017 ballot.</p>
+
+                <p>The bottom portion of the spreadsheet receives data you input; the top portion is all calculated
+                    automatically.
+                </p>
+
+                <p> The bottom portion shows, for each two-year election cycle back to 2003, how many votes were cast,
+                    and who won each seat on the ballot. Because terms are staggered for some offices, some columns span
+                    different rows. (The figures between the quantity of votes cast, and the names, are automatically
+                    calculated based upon the votes cast.)
+                </p>
+
+                <p>
+                    This worksheet calculates whose terms are due to expire (something the public bodies themselves
+                    sometimes lose track of). Information from each worksheet will be the used to build the directory of
+                    available seats up for election that we will publish in hopes of attracting more persons to become
+                    candidates.
+                </p>
+            </div>
         </div>
     </div>
 
-
-    <hr style="margin-top: 20%;" width="70%">
+    <hr style="margin-top: 10%;" width="70%">
     <div class="footer">
         <div class="col-md-12">
             <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
