updated the about section and open governments drop down link 85%

--- a/about.html
+++ b/about.html
@@ -56,29 +56,43 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="open-government.html">Open Government</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="open-government.html" id="#navbarDropdown"
+                                role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Open
+                                Government</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li> <a class="dropdown-item" href="#">Open Meetings</a></li>
+                                <li><a class="dropdown-item" href="#">Open Records</a></li>
+                                <li><a class="dropdown-item" href="#">Economic Interests</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="elections.html">Elections </a>
+                            <a class="nav-link" href="elections.html">Elections</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="volunteer.html">Volunteer</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="donate.html">Donate </a>
+                            <a class="nav-link" href="donate.html">Donate</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us <span class="sr-only">(current)</span></a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="about.html" id="#navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About US</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li> <a class="dropdown-item" href="executive-director.html">Executive Director</a></li>
+                                <li><a class="dropdown-item" href="incorporator-shannon-burns.html">Incorporator Shannon
+                                        Burns</a></li>
+                                <li><a class="dropdown-item" href="incorporator-burt-minor.html">Incorporator Burt
+                                        Minor</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="employment.html">Employment
-                            </a>
+                            <a class="nav-link" href="employment.html">Employment</a>
                         </li>
                     </ul>
                 </div>
@@ -95,19 +109,19 @@
     <div class="container">
         <div class="first-col">
             <p class="about-para">
-                The Citizen Participation Institute is a <a style="text-decoration: none;" href="#" class="link">
-                    tax-deductible </a> nonpartisan Illinois charity <a style="text-decoration: none;" href="#"
+                The Citizen Participation Institute is a <a style="text-decoration: none;" href="uploads/501c3approvalletter.pdf" class="link">
+                    tax-deductible </a> nonpartisan Illinois charity <a style="text-decoration: none;" href="uploads/articlesofincorporation.pdf"
                     class="link"> founded in 2015 </a>by incorporators
-                <a style="text-decoration: none;" href="#" class="link"> Stanley R. Zegel</a>,
-                <a style="text-decoration: none;" href="#" class="link"> Shannon M. Burns</a>, and
-                <a style="text-decoration: none;" href="#" class="link"> Burton D. Minor </a>to aid area citizens in
+                <a style="text-decoration: none;" href="executive-director.html" class="link"> Stanley R. Zegel</a>,
+                <a style="text-decoration: none;" href="incorporator-shannon-burns.html" class="link"> Shannon M. Burns</a>, and
+                <a style="text-decoration: none;" href="incorporator-burt-minor.html" class="link"> Burton D. Minor </a>to aid area citizens in
                 exercising their rights to
-                <a style="text-decoration: none;" href="#" class="link"> open government.</a>
+                <a style="text-decoration: none;" href="open-government.html" class="link"> open government.</a>
             </p>
             <br>
             <p class="about-para">
                 One of our initiatives is to increase the probability of voters having
-                <a style="text-decoration: none;" href="#" class="link"> actual choices </a> they can make in
+                <a style="text-decoration: none;" href="can-you-believe-this.html" class="link"> actual choices </a> they can make in
                 nonpartisan elections.
                 Most offices have only one candidate, but by making it easier for others to run too, voters can have a
                 choice instead of a default.
@@ -117,23 +131,23 @@
             <p class="about-para">
 
                 We publish materials related to the
-                <a style="text-decoration: none;" href="#" class="link"> Freedom of Information Act</a>, the
-                <a style="text-decoration: none;" href="#" class="link">Open Meetings Act</a>, and the
-                <a style="text-decoration: none;" href="#" class="link">Statements of Economic Interests</a> required by
+                <a style="text-decoration: none;" href="open-records.html" class="link"> Freedom of Information Act</a>, the
+                <a style="text-decoration: none;" href="open-meetings.html" class="link">Open Meetings Act</a>, and the
+                <a style="text-decoration: none;" href="economic-interests.html" class="link">Statements of Economic Interests</a> required by
                 the
-                <a style="text-decoration: none;" href="#" class="link">Governmental Ethics Act</a>, including
+                <a style="text-decoration: none;" href="https://www.ilga.gov/legislation/ilcs/ilcs4.asp?DocName=000504200HArt%2E+4A&ActID=129&ChapterID=2&SeqStart=5750000&SeqEnd=6700000" class="link">Governmental Ethics Act</a>, including
                 compilations of legal precedents under those Sunshine Laws. We assist citizens who are experiencing
                 problems
-                <a style="text-decoration: none;" href="#" class="link">securing public information</a> or encountering
-                <a style="text-decoration: none;" href="#" class="link">public meeting violations</a>.
+                <a style="text-decoration: none;" href="open-records-violation-complaint.html" class="link">securing public information</a> or encountering
+                <a style="text-decoration: none;" href="open-meetings-violation-form.html" class="link">public meeting violations</a>.
             </p>
 
             <br>
             <p class="about-para">
                 We publish on this website copyrighted lists we have compiled of the
-                <a style="text-decoration: none;" href="#" class="link"> email addresses</a> that citizens can use to
+                <a style="text-decoration: none;" href="record-request.php" class="link"> email addresses</a> that citizens can use to
                 send Freedom of Information requests to any of the 8,511 units of local government in Illinois.
-                It is the only <a style="text-decoration: none;" href="#" class="link"> complete list</a> of those local
+                It is the only <a style="text-decoration: none;" href="record-request.php" class="link"> complete list</a> of those local
                 governments available. We intend to make it possible for a citizen to fill in a request form on our
                 website, and it will automatically be emailed to the proper official.
 
@@ -142,9 +156,9 @@
             <br>
             <p class="about-para">
                 We are publishing a
-                <a style="text-decoration: none;" href="#" class="link"> directory of nonpartisan elective local
+                <a style="text-decoration: none;" href="resolving-the-problem.html" class="link"> directory of nonpartisan elective local
                     offices</a> to attract more candidates, and will allow candidates to
-                <a style="text-decoration: none;" href="#" class="link"> download all of the paperwork they need </a> to
+                <a style="text-decoration: none;" href="resolving-the-problem.html" class="link"> download all of the paperwork they need </a> to
                 run for a local office such as mayor, city council, village president, village board, school board, fire
                 board, park board, library board and other nonpartisan offices.
             </p>
@@ -154,15 +168,15 @@
                 We will be publishing a free newspaper for local government officials and other interested persons that
                 educates officials on the latest developments in Illinois open government affairs. It will include
                 summaries of the latest court decisions and administrative interpretations of the
-                <a style="text-decoration: none;" href="#" class="link"> Freedom of Information Act</a> and the
-                <a style="text-decoration: none;" href="#" class="link"> Open Meetings Act</a>.
+                <a style="text-decoration: none;" href="open-records.html" class="link"> Freedom of Information Act</a> and the
+                <a style="text-decoration: none;" href="open-meetings.html" class="link"> Open Meetings Act</a>.
             </p>
 
             <br>
             <p class="about-para">
                 We depend upon
-                <a style="text-decoration: none;" href="#" class="link"> volunteers</a> and
-                <a style="text-decoration: none;" href="#" class="link"> donations</a> to operate, and invite them from
+                <a style="text-decoration: none;" href="volunteer.html" class="link"> volunteers</a> and
+                <a style="text-decoration: none;" href="donate.html" class="link"> donations</a> to operate, and invite them from
                 foundations, businesses, and individuals.
 
             </p>
@@ -182,7 +196,7 @@
                             Winfield IL 60190-1556
                         </td>
                         <td>
-                            <a href="#" class="btn">Stanley R. Zegel</a><br><br>
+                            <a href="executive-director.html" class="btn">Stanley R. Zegel</a><br><br>
                             Executive Director<br>
                             (630) 220-0700<br>
                             Director@CitizenParticipation.Org
@@ -203,10 +217,10 @@
 
                     </td>
                     <td>
-                        <a href="#" class="btn btn-lg">Donate</a><br><br>
+                        <a href="donate.html" class="btn btn-lg">Donate</a><br><br>
                     </td>
                     <td>
-                        <a href="#" class="btn btn-lg">Volunteer</a><br><br>
+                        <a href="volunteer.html" class="btn btn-lg">Volunteer</a><br><br>
                     </td>
                 </tr>
             </thead>
@@ -215,7 +229,7 @@
     </div>
     </div>
 
-    <hr style="margin-top: 20%;" width="70%">
+    <hr style="margin-top: 10%;" width="70%">
     <div class="footer">
         <div class="col-md-12">
             <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
