--- a/economic-interests.html
+++ b/economic-interests.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Open Government</title>
+    <title>Economic Interest</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
 
 <body>
     <div class="bg-open-government">
-        
+
         <header>
 
             <div class="navbar navbar-expand-lg navbar-dark  sticky-top">
@@ -93,84 +93,89 @@
     <!--Body of page-->
     <div class="container">
         <div class="first-col">
+            <h3 class="resolve-two"> Economic Interests </h3>
 
-            <h2 class="open-head">The citizens own all the local governments </h2>
-            <br>
-            <h4 class="open-text"> The citizens, not public officials, are the owners of all the 1,297 municipalities
-                (308 cities, 977 villages, and 12 incorporated towns), 1,431 townships, 102 counties, 856 school
-                districts,
-                39 community colleges, 358 library districts, 828 fire districts, 340 park districts, 115 forest
-                preserve,
-                conservation, and soil and water districts, 860 drainage districts, 112 sewerage districts,
-                21 street lighting districts, 20 mosquito control districts, and hundreds of other public bodies in
-                Illinois,
-                8,511 in all. Most of them have their own elected boards, but seldom have enough candidates at election
-                time.
-                <a style="text-decoration: none;" href="#" class="small">Click here for contact information of those
-                    public bodies.</a></h4>
-            <br>
-            <h4 class="open-text"> The owners of anything have a right to know what is going on, and to influence
-                decisions being made. Illinois has several "sunshine" laws designed to preserve those owners' rights in
-                their local governments.
-                Using those rights, owners sometimes request information from officials.</h4>
-            <br>
-            <h4 class="open-text">
-                The Citizen Participation Institute believes that most public officials want to do the right thing,
-                but they are not always aware of what is required. We work with local governments to educate them and
-                keep them updated so violations don't happen. We work with citizens who need help in those matters.
-
-            </h4>
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Open Meetings Act</a> gives anyone
-                (regardless of where they live) the right to attend meetings of public bodies, to be aware in advance of
-                what will be
-                discussed or voted upon, to address the assembly, and to freely make audio or video recordings of the
-                proceedings,
+            <p style="margin: 3% 8%; color: #5040ae; font-size: 95%; font-style: italic;">
+                “All candidates for or holders of state offices and all members of a Commission or Board created by this
+                Constitution shall file a verified statement of their economic interests,as provided by law. The General
+                Assembly by law may impose a similar requirement upon candidates for, or holders of, offices in units of
+                local government and school districts. Statements shall be filed annually ... and shall be available for
+                inspection by the public. Failure to file a statement within the time prescribed shall result in
+                ineligibility for, or forfeiture of, office.”
+                <span style="font-style: normal; font-size: 65%;"> (Ill. Constitution, Art. XIII, Sec. 2)</span>
             </p>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Freedom of Information Act</a> generally
-                provides that
-                anyone is entitled to inspect, copy, and have a copy of any public record in the possession or under the
-                control
-                of any public body. That includes emails or texts on an official's private computer or phone that relate
-                to public business.
-                <a style="text-decoration: none;" href="#" class="link"> Click here to request a public record.</a>
+            <p>
+                The Governmental Ethics Act
+                [<a href="http://www.ilga.gov/legislation/ilcs/ilcs4.asp?DocName=000504200HArt%2E+4A&ActID=129&ChapterID=2&SeqStart=5750000&SeqEnd=6700000"
+                    target="_blank" class="link">5 ILCS 420/4A</a>] requires all elected officials, candidates, and
+                certain
+                public employees to annually file (usually before May 31 every year) a form that nominally is designed
+                to disclose potential conflicts of interest. Anyone who willfully files a false or incomplete Statement
+                of Economic Interests is subject to a fine of up to $2,500, and even a year in the county jail. For
+                failure to file at all, the local State's Attorney is required by both the Illinois Constitution and the
+                statute to have the official or employee removed from office.
             </p>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Governmental Ethics Act</a> requires all
-                elected officials, candidates,
-                and certain public employees to annually file (usually before May 31 every year), a form that nominally
-                is designed to disclose potential conflicts of interest.
+            <p>
+                ​Statements of Economic Interest are usually filed with the county clerk of the county in which the
+                principal office of that person's public body is located. Some public bodies stretch into more than one
+                county. To determine which county handles the filings, click <a href="record-request.php"
+                    target="_blank" class="link"> here</a> to look up that public body; the name
+                of the relevant county appears below the name of the public body there.
             </p>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link"> Citizen Participation Act</a> provides a
-                way to have the court quickly dismiss a suit that was really filed just to scare the defendant from
-                participating in government,
-                petitioning, speaking out, or associating with those who do. The bully can even be ordered to pay the
-                defendant's attorney fees and court costs.
-            </p>
+            <hr style="margin: 3% 0;">
+
+            <p>Many county clerks' websites allow those forms to be inspected online:</p>
+
+            <div class="row text-center" >
+                <div class="col-sm-3">
+                    <a href="https://ethics.cookcountyclerk.com/publicsearch/" class="btn btn-md"> Cook County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a style="background-color:#aeaeae;" href="" class="btn btn-md"> DeKalb County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a href="http://ei.dupageco.org/PublicSearch/" class="btn btn-md"> DuPage County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a href="https://kaneeis.countyofkane.org/SEIOnline/PublicSearch/Default.aspx" class="btn btn-md"> Kane County</a>
+                </div>
+            </div>
+
+            <div class="row text-center" style="margin-top: 2%;">
+                <div class="col-sm-3">
+                    <a style="background-color:#aeaeae;" href="" class="btn btn-md"> Kendall County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a href="http://countyclerk.lakecountyil.gov/VitalRecords/PublicFilings/Pages/SEI-Public.aspx" class="btn btn-md"> Lake County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a style="background-color:#aeaeae;" href="" class="btn btn-md"> McHenry County</a>
+                </div>
+
+                <div class="col-sm-3">
+                    <a style="background-color:#aeaeae;" href="" class="btn btn-md"> Will County</a>
+                </div>
+            </div>
+
+
+
         </div>
-
-        <ul class="open-list">
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Open Meetings</a></li>
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Open Records</a></li>
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Economic Interests
-                    Statements</a></li>
-        </ul>
     </div>
 
 
-    <hr style="margin-top: 20%;" width="70%">
+    <hr style="margin-top: 8%;" width="70%">
     <div class="footer">
         <div class="col-md-12">
-            <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
+            <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved
+                Citizen
                 Participation Institute</p>
         </div>
     </div>
