--- a/electoral-boards.html
+++ b/electoral-boards.html
@@ -41,8 +41,8 @@
 </head>
 
 <body>
-    <div class="bg-open-government">
-        
+    <div class="bg-brown">
+
         <header>
 
             <div class="navbar navbar-expand-lg navbar-dark  sticky-top">
@@ -86,88 +86,64 @@
         </header>
 
         <div class="text-left">
-            <img src="images/4869420be83.png" alt="">
+            <img src="images/icon_logo.png" alt="" style="margin-left: 5%;">
         </div>
 
     </div>
-    <!--Body of page-->
-    <div class="container">
-        <div class="first-col">
 
-            <h2 class="open-head">The citizens own all the local governments </h2>
-            <br>
-            <h4 class="open-text"> The citizens, not public officials, are the owners of all the 1,297 municipalities
-                (308 cities, 977 villages, and 12 incorporated towns), 1,431 townships, 102 counties, 856 school
-                districts,
-                39 community colleges, 358 library districts, 828 fire districts, 340 park districts, 115 forest
-                preserve,
-                conservation, and soil and water districts, 860 drainage districts, 112 sewerage districts,
-                21 street lighting districts, 20 mosquito control districts, and hundreds of other public bodies in
-                Illinois,
-                8,511 in all. Most of them have their own elected boards, but seldom have enough candidates at election
-                time.
-                <a style="text-decoration: none;" href="#" class="small">Click here for contact information of those
-                    public bodies.</a></h4>
-            <br>
-            <h4 class="open-text"> The owners of anything have a right to know what is going on, and to influence
-                decisions being made. Illinois has several "sunshine" laws designed to preserve those owners' rights in
-                their local governments.
-                Using those rights, owners sometimes request information from officials.</h4>
-            <br>
-            <h4 class="open-text">
-                The Citizen Participation Institute believes that most public officials want to do the right thing,
-                but they are not always aware of what is required. We work with local governments to educate them and
-                keep them updated so violations don't happen. We work with citizens who need help in those matters.
+    <!--body contoiners-->
+    <div class="container records">
+        <hr>
 
-            </h4>
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Open Meetings Act</a> gives anyone
-                (regardless of where they live) the right to attend meetings of public bodies, to be aware in advance of
-                what will be
-                discussed or voted upon, to address the assembly, and to freely make audio or video recordings of the
-                proceedings,
-            </p>
+        <h3 style="font-weight: 600;"><em>Challenges to Nomination Papers</em></h3>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Freedom of Information Act</a> generally
-                provides that
-                anyone is entitled to inspect, copy, and have a copy of any public record in the possession or under the
-                control
-                of any public body. That includes emails or texts on an official's private computer or phone that relate
-                to public business.
-                <a style="text-decoration: none;" href="#" class="link"> Click here to request a public record.</a>
-            </p>
+        <p class="emp-para">
+            With 40,000 elected offices in Illinois, in the limited time available between filing nomination papers and
+            needing to prepare the ballot, no court or officials could possibly validate all the signatures and other
+            requirements of nomination papers. Illinois law assumes that the other candidates (or their friends) will
+            examine the papers of their opponents and bring to the attention of the authorities any defects discovered.
+            It is a valuable process that weeds out candidates who cannot follow the law's simple directions in
+            preparing their own important papers from being elected to a position where they must follow detailed
+            directions set by law in spending taxpayer money or administering important functions to their residents.
+        </p>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link">Governmental Ethics Act</a> requires all
-                elected officials, candidates,
-                and certain public employees to annually file (usually before May 31 every year), a form that nominally
-                is designed to disclose potential conflicts of interest.
-            </p>
+        <p>
+            That process is initiated by filing, within five business days after the close of the filing period, a
+            written Objection with the office where the nomination papers were filed. It need not be in any specific
+            form as long as it states the name and residence address of the objector, states what his interest is in
+            filing the objection, states fully exactly what is wrong with the nomination papers, and what the objector
+            wants the officials to do about it.
+        </p>
 
-            <br>
-            <p class="open-para">
-                The <a style="text-decoration: none;" href="#" class="link"> Citizen Participation Act</a> provides a
-                way to have the court quickly dismiss a suit that was really filed just to scare the defendant from
-                participating in government,
-                petitioning, speaking out, or associating with those who do. The bully can even be ordered to pay the
-                defendant's attorney fees and court costs.
-            </p>
+        <p>
+            The law creates an Electoral Board with automatic members to hear the case, often of local elected
+            officials. Those persons are not experts in Illinois election law, and they often end up making up the rules
+            as they go along, unaware of how other Electoral Boards or Courts have ruled on points raised that were not
+            spelled out in detail in the written law. Sadly, many times something ruled against by one Electoral Board
+            would have been acceptable to an Electoral Board elsewhere.
+        </p>
+
+        <p>
+            To promote uniform application of the law throughout the state, in consultation with leading election
+            attorneys and experts the Citizen Participation Institute has curated two publications that establish a
+            procedure that assures a party without an attorney still gets a fair hearing, and that provide
+            pre-determined rulings for various situations. That removes any appearance of bias in rendering decisions.
+            The latest version of each publication can be downloaded here:
+        </p>
+
+        <div class="row">
+            <div class="col-md-6 mx-auto text-center">
+                <a href="orderelectoralboard.html" class="btn btn-md" style="margin-bottom: 3%;">Click Here to Download
+                    Manuals</a> <br>
+                <a href="election-attorneys.html" class="btn btn-md">Click Here for a List of Election Attorneys</a>
+
+            </div>
         </div>
-
-        <ul class="open-list">
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Open Meetings</a></li>
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Open Records</a></li>
-            <li><a style="text-decoration: none;" href="#" class="btn">Learn more about Economic Interests
-                    Statements</a></li>
-        </ul>
     </div>
 
 
-    <hr style="margin-top: 20%;" width="70%">
+
+    <hr style="margin-top: 8%;" width="70%">
     <div class="footer">
         <div class="col-md-12">
             <p class="text-center" style="font-size: 13px; color: darkred;"> &copy 2020 All right reserved Citizen
