updated maintenance index

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -71,17 +71,17 @@
 
             <!--Card column four-->
             <div class="col-md-4">
-                <a href="search.php" class="btn btn-warning"> Search UOG</a>
+                <a href="search.php" class="btn btn-warning"> Search U-O-G</a>
             </div>
 
             <!--Card column five-->
             <div class="col-md-4">
-                <a href="view-data.php" class="btn btn-primary"> view </a>
+                <a href="view-data.php" class="btn btn-primary"> View Data </a>
             </div>
 
             <!--Card column search-->
             <div class="col-md-4">
-                <a href="history-table.php" class="btn btn-secondary"> view changes history</a>
+                <a href="history-table.php" class="btn btn-secondary"> View Changes History</a>
             </div>
 
         </div>
