--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -71,7 +71,7 @@
 
             <!--Card column four-->
             <div class="col-md-4">
-                <a href="search.php" class="btn btn-warning"> Search U-O-G</a>
+                <a href="search.php" class="btn btn-warning"> Search UOG</a>
             </div>
 
             <!--Card column five-->
