updated maintenance index

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -81,7 +81,7 @@
 
             <!--Card column search-->
             <div class="col-md-4">
-                <a href="history-table.php" class="btn btn-secondary"> View Changes History</a>
+                <a href="history-table.php" class="btn btn-secondary"> View Changes</a>
             </div>
 
         </div>
